--- a/tokopedia/Pages/ReusableView/PriceRangeTableViewCell.xib
+++ b/tokopedia/Pages/ReusableView/PriceRangeTableViewCell.xib
@@ -12,46 +12,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" rowHeight="147" id="KGk-i7-Jjw" customClass="PriceRangeTableViewCell" customModule="tokopedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="147"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" rowHeight="182" id="KGk-i7-Jjw" customClass="PriceRangeTableViewCell" customModule="tokopedia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="182"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="146.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="181.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKQ-Wc-D8y" customClass="RangeSeekSlider" customModule="RangeSeekSlider">
-                        <rect key="frame" x="16" y="64" width="288" height="65"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="hideLabels" value="YES"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
-                                <real key="value" value="3"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="colorBetweenHandles">
-                                <color key="value" red="0.2784313725" green="0.70196078429999997" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="handleBorderColor">
-                                <color key="value" red="0.2784313725" green="0.70196078429999997" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="handleColor">
-                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="handleBorderWidth">
-                                <real key="value" value="1"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="handleDiameter">
-                                <real key="value" value="24"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="selectedHandleDiameterMultiplier">
-                                <real key="value" value="1"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="enableStep" value="YES"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="step">
-                                <real key="value" value="100"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minimum Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2Z-El-2Yl">
                         <rect key="frame" x="16" y="16" width="95.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -86,7 +53,7 @@
                             <constraint firstAttribute="height" constant="1" id="eqF-5d-6Um"/>
                         </constraints>
                     </view>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VVy-0G-gIY" customClass="TSCurrencyTextField">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VVy-0G-gIY" customClass="TSCurrencyTextField">
                         <rect key="frame" x="16" y="33" width="129" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="pkf-UO-32e"/>
@@ -95,7 +62,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ey2-Ge-20x" customClass="TSCurrencyTextField">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ey2-Ge-20x" customClass="TSCurrencyTextField">
                         <rect key="frame" x="175" y="33" width="129" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="mIP-Ef-am3"/>
@@ -104,6 +71,42 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKQ-Wc-D8y" customClass="RangeSeekSlider" customModule="RangeSeekSlider">
+                        <rect key="frame" x="16" y="64" width="288" height="80"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="7vm-8h-Zrs"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="hideLabels" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
+                                <real key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="colorBetweenHandles">
+                                <color key="value" red="0.2784313725" green="0.70196078429999997" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="handleBorderColor">
+                                <color key="value" red="0.2784313725" green="0.70196078429999997" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="handleColor">
+                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="handleBorderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="handleDiameter">
+                                <real key="value" value="24"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="selectedHandleDiameterMultiplier">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="enableStep" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="step">
+                                <real key="value" value="100"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="n9l-ci-yI3" firstAttribute="leading" secondItem="pHI-Aw-Axl" secondAttribute="trailing" constant="10" id="0as-ip-sbV"/>
@@ -127,7 +130,7 @@
                     <constraint firstItem="n9l-ci-yI3" firstAttribute="top" secondItem="Ey2-Ge-20x" secondAttribute="bottom" id="sOE-CF-Vva"/>
                     <constraint firstItem="x2Z-El-2Yl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="siN-eb-d1e"/>
                     <constraint firstItem="HIa-Mz-p2G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="tGk-rt-SQd"/>
-                    <constraint firstItem="LKQ-Wc-D8y" firstAttribute="top" secondItem="ey6-SI-pTp" secondAttribute="bottom" id="wYz-sI-Atq"/>
+                    <constraint firstItem="LKQ-Wc-D8y" firstAttribute="top" secondItem="ey6-SI-pTp" secondAttribute="bottom" id="yM3-RM-HDs"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -137,7 +140,7 @@
                 <outlet property="minTextField" destination="VVy-0G-gIY" id="X3E-PP-RV0"/>
                 <outlet property="slider" destination="LKQ-Wc-D8y" id="pg7-NM-UfM"/>
             </connections>
-            <point key="canvasLocation" x="34" y="105.5"/>
+            <point key="canvasLocation" x="34" y="123"/>
         </tableViewCell>
     </objects>
 </document>
